# conan_example

./: README.md  requirements.txt
Bazel_build/: conanfile.txt
Bazel_example/: BUILD  MODULE.bazel  README.md  main.cpp
CMake_build/: README.md
CMake_example/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  student.json
ConanPy_build/: README.md  conanfile.py
Makefile_build/: Makefile  README.md
Makefile_example/: Makefile  README.md  conanfile.txt  main.cpp
Meson_build/: README.md  conanfile.txt  meson.build
Meson_example/: meson.build
